--- a/innov/package.json
+++ b/innov/package.json
@@ -24,7 +24,8 @@
     "sails-disk": "~0.10.0",
      "bcrypt": "~0.8.0",
     "passport": "~0.2.1",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "passport-facebook": "^1.0.3"
   },
   "scripts": {
     "debug": "node debug app.js",
